# Dev-Janitor

./: AI_UPDATES_2026.md  CHANGELOG.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  02-feature_request.yml  03-generic_question.yml
.github/workflows/: ci.yml  release.yml
docs/: INFOGRAPHIC_PROMPT.md  RUST_REFACTOR_PLAN.md
docs/v2-rebuild/: REBUILD_PLAN.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/ai_cleanup/: mod.rs
src-tauri/src/ai_cli/: mod.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/commands/: mod.rs  security.rs
src-tauri/src/package_manager/: cargo.rs  npm.rs  pip.rs
src-tauri/src/security_scan/: definitions.rs  mod.rs  scanner.rs
src-tauri/src/utils/: command.rs
src/components/layout/: Sidebar.tsx
src/components/views/: AiCliView.tsx  CacheView.tsx  PackagesView.tsx  SecurityScanView.tsx  ServicesView.tsx  ToolsView.tsx  index.ts
src/i18n/: en.json  zh.json
src/main/: aiAssistant.ts  aiCleanupScanner.ts  autoUpdater.ts  detectionEngine.test.ts  detectionEngine.ts  index.ts  ipcHandlers.ts  packageManager.ts  preload.ts
src/renderer/: App.tsx
src/renderer/components/AI/: AIAssistantDrawer.tsx
src/renderer/components/Environment/: EnvironmentView.tsx  PathAnalyzer.tsx
src/renderer/components/Settings/: AIConfigSection.tsx  AboutSection.tsx  LanguageSelector.tsx  SettingsView.tsx  ThemeSelector.tsx  index.ts
src/renderer/components/Tools/: ToolCard.tsx  ToolDetailModal.tsx
src/renderer/i18n/locales/: en-US.json  zh-CN.json
src/renderer/store/: index.ts
src/store/: index.ts
