[package]
name = "dev-janitor-v2"
version = "2.2.0"
description = "Developer environment cleanup and management tool"
authors = ["Dev Janitor Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/dev-janitor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dev_janitor_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for AI API)
reqwest = { version = "0.12", features = ["json"] }

# System info & process monitoring
sysinfo = "0.33"

# File system operations
walkdir = "2"
glob = "0.3"

# Parallel processing
rayon = "1"

# Pattern matching
regex = "1"

# Command discovery
which = "7"

# Cross-platform paths
directories = "6"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Hash generation
md5 = "0.7"

# Date/time formatting
chrono = "0.4"

# ============ Release Profile Optimization ============
# These settings significantly reduce binary size

[profile.release]
# Strip debug symbols
strip = true
# Enable link-time optimization
lto = true
# Optimize for size
opt-level = "s"
# Reduce codegen units for better optimization
codegen-units = 1
# Abort on panic (smaller than unwinding)
panic = "abort"

